<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/ivMask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/origh512" />

        <ImageView
            android:id="@+id/ivMask"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="fitXY"
            android:src="@drawable/mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="24dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/legal_age"
            android:textColor="@color/white"
            android:textSize="@dimen/legal_age"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_name"
            android:textColor="@color/heading_white"
            android:textSize="@dimen/movie_title_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTag"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_categories"
            android:textColor="@color/categories"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/ivStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTag"
            app:srcCompat="@drawable/star_icon_fill" />

        <ImageView
            android:id="@+id/ivStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivStar1"
            app:layout_constraintTop_toBottomOf="@+id/tvTag"
            app:srcCompat="@drawable/star_icon_fill" />

        <ImageView
            android:id="@+id/ivStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivStar2"
            app:layout_constraintTop_toBottomOf="@+id/tvTag"
            app:srcCompat="@drawable/star_icon_fill" />

        <ImageView
            android:id="@+id/ivStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivStar3"
            app:layout_constraintTop_toBottomOf="@+id/tvTag"
            app:srcCompat="@drawable/star_icon_fill" />


        <ImageView
            android:id="@+id/ivStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivStar4"
            app:layout_constraintTop_toBottomOf="@+id/tvTag"
            app:srcCompat="@drawable/star_icon" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/ivStar5"
            app:layout_constraintTop_toBottomOf="@+id/tvTag" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/text_back"
            android:textColor="@color/grey"
            android:textSize="@dimen/back_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_storyline_header"
            android:textColor="@color/heading_white"
            android:textSize="@dimen/storyline_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReviews" />

        <TextView
            android:id="@+id/storylineText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/movie_storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/storyline_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/storyBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="storylineText"
            tools:layout_editor_absoluteY="496dp" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/movie_cast_header"
            android:textColor="@color/heading_white"
            android:textSize="@dimen/cast_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storylineText" />

        <include
            layout="@layout/list_actors_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>